Bug 1208656 - Grab the tail dispatch each time in case the runnable spins the event loop. r=khuey, a=lizzard

If the runnable spins the event loop, we may end up firing the tail dispatcher,
which causes the AutoTaskDispatcher to be destroyed, after which point invoking
methods on it will crash. We need to grab it each time so that it will be lazily
instantiated as-needed.