dom/media/MediaStreamGraph.cpp
@@ -1497,7 +1497,6 @@ MediaStreamGraphImpl::RunInStableState(bool aSourceIsMSG)
     mLifecycleState >= LIFECYCLE_WAITING_FOR_THREAD_SHUTDOWN;
 #endif
 
-  TaskDispatcher& tailDispatcher = AbstractThread::MainThread()->TailDispatcher();
   for (uint32_t i = 0; i < runnables.Length(); ++i) {
     runnables[i]->Run();
     // "Direct" tail dispatcher are supposed to run immediately following the
@@ -1509,7 +1508,7 @@ MediaStreamGraphImpl::RunInStableState(bool aSourceIsMSG)
     // and we need to make sure that the watcher responding to "stream available"
     // has a chance to run before the second notification starts tearing things
     // down.
-    tailDispatcher.DrainDirectTasks();
+    AbstractThread::MainThread()->TailDispatcher().DrainDirectTasks();
   }
 }
 
